tests/assets/www/1.1/errors/failed_streaming.json.php
<?php

header('Content-Type: application/json; charset=UTF-8', true, 401);

?>
<html>\n<head>\n<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>\n<title>Error 401 Unauthorized</title>
</head>
<body>
<h2>HTTP ERROR: 401</h2>
<p>Problem accessing '/1.1/user.json'. Reason:
<pre>    Unauthorized</pre>
</body>
</html>
